<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewRatingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_rate_user"
        android:id="@+id/textViewUserName"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCleanRating"
        android:layout_gravity="center_horizontal"
        android:text="@string/string_cleanliness"

        />
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cleanRating"
        android:layout_gravity="center_horizontal"
        android:clickable="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textOnTime"
        android:layout_gravity="center_horizontal"
        android:text="@string/string_onTime"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeRating"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/ratingComment"
        android:layout_gravity="bottom"
        android:text="@string/string_comment"
        android:clickable="true"
        android:autoText="false"
        android:textIsSelectable="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_submit"
        android:id="@+id/submitComment"
        android:layout_gravity="bottom"
        android:clickable="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:id="@+id/buttonBack"
        android:layout_gravity="bottom"
        android:clickable="true"/>

</LinearLayout>
