<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rideshare.NewSearchActivity">

    <TextView
        android:id="@+id/searchTextView"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:text="Search"

        android:textAlignment="center"
        android:typeface="monospace"
        android:textSize="40sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:elegantTextHeight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchText"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/searchView"
        android:layout_toStartOf="@+id/switch1" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/switch1"
        android:layout_below="@+id/searchView"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_status"
        android:text="@string/string_enter_their_status"
        android:layout_below="@+id/switch1"
        android:layout_marginTop="16dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statusSpinner"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/text_view_status"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_gender"
        android:text="@string/string_enter_their_gender"
        android:layout_below="@+id/statusSpinner" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/genderSpinner"
        android:layout_below="@+id/text_view_gender"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_disable"
        android:text="@string/string_enter_their_disability"
        android:layout_below="@+id/genderSpinner" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/disableSpinner"
        android:layout_below="@+id/text_view_disable"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp" />

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchView"
        android:layout_below="@+id/searchTextView"
        android:layout_alignParentEnd="true"
        android:queryHint="Username" />
    <Button
        android:id="@+id/nextButton"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:rotation="90"
        android:background="@drawable/btn_triangle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
